Fixed IE layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ blockquote {
     }
 
     .banneritem {
-        margin: 10px 15px;
+        margin: 10px 12.5px;
     }
 
     .content {
